feat(commands): audit invalid commands and clarify TreeCommand errors
- TreeCommand now distinguishes subcommand-not-found (msgInvalidCommand)
  from rejected key:val pairs (msgBadParameter); RTPCmd stops its
  manual positional loop and fully delegates to TreeCommand.onCommand.
- BukkitBaseRTPCmd emits RTP.log(Level.WARNING, msg) for both invalid
  commands and bad parameters, satisfying REQ-RTP-S-004 auditing.
- SendMessage adds an interceptor hook (addInterceptor) replacing the
  old dual-logging for tests and `rtp test full`.
- Add InvalidCommandTest in rtp-core and expand the `rtp test`
  job suite (AsyncReplyTestJob, LiveCommandDispatcherTestJob,
  QueueStarvationTestJob, TestApiCompatCmd, TestFullCmd,
  TestSchedulerCmd).